fix z-index menu

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -86,7 +86,7 @@ body {
     left: 0;
     right: 0;
     position: fixed;
-    z-index: 11F;
+    z-index: 11;
     transition: all 0.3s;
     &.dark-header {
       background-color: #5478e9;
